[project]
name = "cargr-api"
version = "0.1.0"
description = "FastAPI based car.gr scraper and API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "stealth-requests>=2.0.0",
    "pydantic>=2.6.0",
    "requests>=2.31.0",
    "cachetools>=5.3.0",
    "fastapi-mcp>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cargr-api"]

[tool.uv]
dev-dependencies = []
